<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="title_activity_transaction_add">Add Transaction</string>
    <string name="title_activity_category_add">Add Transaction</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_category_list">Categories</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="create_database">Recreate Database</string>
    <string name="refresh">Refresh</string>
    <string name="summary">Summary</string>
    <string name="title_activity_summary">Summary</string>
    <string name="scan_sms">Scan SMS\'s</string>
    <string name="link_categories_unlinked">Link Unlinked Categories</string>
    <string name="clean_trans">Wipe Transactions</string>
    <string name="show_unlinked">Show Unlinked</string>
    <string name="show_all">Show All</string>
    <string name="title_activity_category_summary">CategorySummary</string>
    <string name="show_only_actuals">Show Only Actuals</string>
    <string name="show_only_budgets">Show Only Budgets</string>
    <string name="show_remaining">Show Remaining</string>
    <string name="show_actuals">Show Actuals</string>
    <string name="scan_csv">Scan CSV</string>
    <string name="backup_database">Backup DB</string>
    <string name="restore_database">Restore DB</string>
    <string name="show_budgetnotspent">Show Only Budget remaining</string>

</resources>
