<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".TransactionListActivity">

    <item
        android:id="@+id/action_prev"
        android:icon="@drawable/ic_arrow_back_white_48dp"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_arrow_forward_white_48dp"
        android:title=""
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:title=""
        app:showAsAction="always"/>

    <!--<item android:id="@+id/refresh" android:title="@string/refresh"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/add_transaction" android:title="@string/add_transaction"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/categories" android:title="@string/categories"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/summary" android:title="@string/summary"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_unlinked" android:title="@string/show_unlinked"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/show_all" android:title="@string/show_all"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/scan_csv" android:title="@string/scan_csv"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/scan_sms" android:title="@string/scan_sms"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/link_categories_unlinked" android:title="@string/link_categories_unlinked"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/backup_database" android:title="@string/backup_database"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/restore_database" android:title="@string/restore_database"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/create_database" android:title="@string/create_database"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/clean_trans" android:title="@string/clean_trans"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
